fix(sonar): resolve Sprint-2 SonarQube issues — 26 files
- System.out.println → @Slf4j log in NexgenaiApplication, AdminInitializer, AuthService
- RuntimeException → IllegalStateException/IllegalArgumentException in FileStorageService,
  AuthService, EmailService, CvMatchingService, TestSessionService (all occurrences)
- Nested ternaries extracted to if/else in AntiCheatService, HrService, PythonExtractorClient
- Private constructors added to InterviewDtos and JobTestDtos utility classes
- Collectors.toList() → toList() in AntiCheatService
- Unused variable (savedApp) removed from ApplicationService
- Empty catch blocks now log.debug() in ApplicationService, CandidateService, EvaluatorService, CodeExecutionService
- Unused methods/params removed: dim() in HrService, codeFile in buildDockerProcess,
  email in runCode, evaluatorId in toSlotDto, maxPts in scoreQcm
- Constants used: LANG_PYTHON/LANG_JAVASCRIPT/FILE_SOLUTION_* in CodeExecutionService,
  TIME_START/TIME_END in InterviewService, ROLE_HR/ROLE_ADMIN in SecurityConfig, LANG_PYTHON in TestSessionService
- Separate line declarations fixed in AssessmentResultsService, TestSessionService
- Commented-out code removed from JobRepository and JobTestDataInitializer
- Boolean literal simplified in AssessmentCrudService (S1125)
- Thread.sleep removed from JwtServiceTest
- isEmpty() instead of length() > 0 in JobControllerTest
- Regex character classes simplified (CASE_INSENSITIVE redundancy) in SecurityAuditFilter
- break/continue restructured in EvaluatorService, InterviewService
- createInterviewForStageIfNeeded() extracted to reduce complexity in InterviewService
- declares IOException removed from buildDirectProcess in CodeExecutionService
- NumberFormatException empty catch now logs trace in CodeExecutionService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>